--- a/style.css
+++ b/style.css
@@ -3,3 +3,58 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+img{
+  display:block;
+  margin-left:400px;
+  margin-right: auto;
+  text-align:center;
+  width:50%;
+}
+nav{
+  display:inline-block;
+  background-color:grey;
+  margin-top:15px;
+  margin-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  row-gap: 40px;
+  
+
+}
+figcaption{
+
+  margin-left:450px;
+  width:500px;
+  display:flex;
+  
+}
+figure{
+  line-height: 30px;
+}
+#featured-property p {
+  width:50%;
+  text-align: center;
+  margin-left:450px;
+  margin-right:450px;
+  line-height: 20px;
+
+}
+#details{
+  background-color:red;
+  text-align:center;
+  width:100%;
+  display:flex;
+  gap:200px;
+  float: left;
+
+}
+#{
+  
+
+}
+
+
+ 
